Pre-launch updates

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
 
     <!-- Page Title -->
-    <title>Melissa Cooney - Designer & Developer</title>
+    <title>Melissa Cooney - Full-Stack Web Developer</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Emeric - awesome coming soon and portfolio template to kick-start your project">
-    <meta name="keywords" content="mix_design, coming soon, under construction, template, landing page, portfolio, one page, responsive, html5, css3, creative, clean, agency, personal page">
-    <meta name="author" content="mix_design">
+    <meta name="description" content="Melissa Cooney is a Full Stack Web Developer, 3D Web Designer, and Shopify Expert">
+    <meta name="keywords" content="web developer, web design, full-stack, 3D web, shopify expert, portfolio, web app developer, responsive, html5, css3, react developer">
+    <meta name="author" content="Melissa Cooney">
 
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +26,8 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Melissa Cooney - Designer & Developer">
-    <meta property="og:description" content="Emeric - awesome coming soon and portfolio template to kick-start your project">
+    <meta property="og:title" content="Melissa Cooney - Full-Stack Web Developer">
+    <meta property="og:description" content="Melissa Cooney is a Full Stack Web Developer, 3D Web Designer, and Shopify Expert">
     <meta property="og:url" content="http://mixdesign.club/themeforest/emeric/">
     <meta property="og:image" content="http://mixdesign.club/themeforest/emeric/img/favicon/og-image.jpg">
     <!-- Facebook Metadata End -->
@@ -791,7 +791,7 @@
                     <div class="col-12 col-lg-8 menudata__item">
                       <p class="menudata__title">Available:</p>
                       <p class="menudata__text">
-                        <a class="contact-link" href="https://goo.gl/maps/nWXKpGaDPuyH6gxRA">Remotely or Onsite in Eugene, Oregon</a>
+                        8 AM to 8 PM EST
                       </p>
                     </div>
                   </div>
@@ -1725,8 +1725,8 @@
                           <img class="inner__name" src="img/svg/section-name-contact.svg" alt="About Me">
                         </div>
                         <div class="col-12 col-md-8">
-                          <p class="inner__text">Let's get in touch. You can call me or leave a request here. 
-                            I am glad to take your call from <span>8:00 AM PST to 8:00 PM PST</span> Monday to Friday.</p>
+                          <p class="inner__text">Let's get in touch. You can e-mail me or leave a request here. 
+                            I am available from <span>8:00 AM PST to 8:00 PM PST</span> Monday to Friday.</p>
                         </div>
                       </div>
                     </div>
@@ -1748,10 +1748,7 @@
                             </div>
                             <div class="contactdata__descr">
                               <p class="small light">
-                                <a class="contact-link" href="https://goo.gl/maps/nWXKpGaDPuyH6gxRA" target="_blank">Available Onsite in<br>Eugene, Oregon</a>
-                              </p>
-                              <p class="small light">
-                                <a class="contact-link" href="https://goo.gl/maps/xap5o3MZBuC6DFHz8" target="_blank">Available Hybrid for<br>The Pacific Northwest</a>
+                                Available independently <br>for major projects.
                               </p>
                             </div>
                           </div>
@@ -1789,17 +1786,6 @@
                               <h5>Contact</h5>
                             </div>
                             <div class="contactdata__descr">
-                              <p class="small light">
-                                <a class="contact-link" id="phone-link" href="#">+1 
-                                  <script type="text/javascript">
-                                    var part1 = "541";
-                                    var part2 = "731";
-                                    var part3 = "4942";
-                                    document.write(part1 + "-" + part2 + "-" + part3);
-                                  </script>                                
-                                </a>
-                                <br>
-                              </p>
                               <p class="small">
                                 <a class="contact-link light" href="mailto:hello@melissacooney.dev?subject=Message%20from%20your%20site">hello@melissacooney.dev</a>
                                 <br>
@@ -2069,34 +2055,6 @@
 
   <div class="cursor cursor1"></div>
   <div class="cursor cursor2"></div>
-
-  <!-- Click-to-Copy Phone Number Script -->
-  <script type="text/javascript">
-    var part1 = "541";
-    var part2 = "731";
-    var part3 = "4942";
-    var phoneNumber = "+1 " + part1 + "-" + part2 + "-" + part3;
-    document.getElementById('phone-link').innerText = phoneNumber;
-
-    document.getElementById('phone-link').addEventListener('click', function(event) {
-        event.preventDefault();
-
-        // Create a temporary textarea element to hold the phone number
-        var tempInput = document.createElement('textarea');
-        tempInput.value = phoneNumber;
-        document.body.appendChild(tempInput);
-
-        // Select and copy the text
-        tempInput.select();
-        document.execCommand('copy');
-
-        // Remove the temporary textarea element
-        document.body.removeChild(tempInput);
-
-        // Provide feedback to the user
-        alert('Phone number copied to clipboard: ' + phoneNumber);
-    });
-  </script>
 
   <!-- Mouse Cursor Animations Script -->
   <script>
