--- a/index.html
+++ b/index.html
@@ -23,15 +23,6 @@
     <link rel="manifest" href="img/favicon/manifest.webmanifest">
     <!-- Template Favicon & Icons End -->
 
-    <!-- Facebook Metadata Start -->
-    <meta property="og:image:height" content="1200">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Melissa Cooney - Full-Stack Web Developer">
-    <meta property="og:description" content="Melissa Cooney is a Full Stack Web Developer, 3D Web Designer, and Shopify Expert">
-    <meta property="og:url" content="http://mixdesign.club/themeforest/emeric/">
-    <meta property="og:image" content="http://mixdesign.club/themeforest/emeric/img/favicon/og-image.jpg">
-    <!-- Facebook Metadata End -->
-
     <!-- Template Styles Start -->
     <link rel="stylesheet" type="text/css" href="css/loaders/loader.css">
     <link rel="stylesheet" type="text/css" href="css/plugins.css">
@@ -620,7 +611,7 @@
     <div class="loader">
       <div class="loader__content">
         <div class="loader__logo">
-          <img src="img/logo.svg" alt="Melissa Cooney - Designer & Developer">
+          <img src="img/logo.svg" alt="Melissa Cooney - Full-Stack Web Developer">
         </div>
       </div>
     </div>
@@ -642,10 +633,13 @@
   <header id="header" class="header">
 
     <!-- Logo Start -->
+    <a href="index.html" style="color: #131417;">
     <div class="header__logo" style="display: flex;">
-      <img src="img/icons/24x24-star.svg" alt="Melissa Cooney - Designer & Developer" style="margin-right: 6px;">
-      <span style="font-size:2.25rem;font-weight:600;text-transform: uppercase;">Melissa Cooney</span>
+
+        <img src="img/icons/24x24-star.svg" alt="Melissa Cooney - Full-Stack Web Developer" style="margin-right: 6px;">
+        <span style="font-size:2.25rem;font-weight:600;text-transform: uppercase;">Melissa Cooney</span>
     </div>
+  </a>
     <!-- Logo End -->
 
     <!-- Header Content Start -->
